# rigitbot

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Rocket.toml
githooks/: pre-push
infra/: README.md  hash_b64.py  main.tf  outputs.tf
src/: main.rs
