[package]
name = "rigitbot"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = "0.10.0"
lambda_runtime = "0.8.1"
octocrab = "0.29.1"
rocket = "0.5.0-rc.3"
serde = "1.0.183"
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
